fix broken layout

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -8,8 +8,6 @@
 
     // Positioning context for the mobile navigation icon
     position: relative;
-
-    background-image: "{{ "/images/logo.png" | prepend: site.baseurl }}";
 }
 
 .site-title {
